# lakebase-app-dev-kit

./: .claudepluginhub-verify  .env.kit.example  .env.template.config  .env.template.test.config  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  install.sh  manifest.json  package-lock.json  package.json  tsup.config.ts  vitest.config.ts
.claude-plugin/: marketplace.json  plugin.json
.husky/: pre-push
commands/: sftdd.md  tdd.md
docs/: scm-workflow-state.md
examples/sftdd-scenarios/stockflow/recorded-build/features/F6-split-tracking-code/stories/S3-split-drop-old/turns/002-navigator/code/: pyproject.toml
examples/sftdd-scenarios/stockflow/recorded-build/features/F6-split-tracking-code/stories/S3-split-drop-old/turns/002-navigator/code/app/repositories/: __init__.py
scripts/: copy-build-assets.mjs  prepare.mjs  run-all-live-tests.sh  run-live-tests.sh  sync-devhub-skills.ts
templates/project/python/: Makefile  pyproject.toml
templates/project/python/alembic/: env.py
templates/project/python/alembic/versions/: README.md
templates/project/python/app/: database.py  main.py
tests/: validate_bake_hard_rules_into_skill_md.sh  validate_create_ac_schema.sh  validate_create_adapter_interface.sh  validate_create_architect_reviewer_agent.sh  validate_create_budget_module.sh  validate_create_compare_experiments.sh  validate_create_design_spec_gate.sh  validate_create_driver_agent.sh  validate_create_experiment_module.sh  validate_create_feature_schema.sh  validate_create_jira_adapter_stub.sh  validate_create_markdown_adapter.sh  validate_create_navigator_agent.sh  (+18 more)
(+1992 files in other folders)
