[project]
name = "{{PROJECT_NAME}}"
version = "0.1.0"
description = "FastAPI + SQLAlchemy + Lakebase database branches"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.14.0",
    "psycopg[binary]>=3.2.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "httpx>=0.27.0",
    "pytest-bdd>=7.0.0",
]

[tool.pytest.ini_options]
# `migration` marks a schema-mutating reversibility test. The verify runs it on
# its OWN isolated ephemeral branch (SFTDD_PYTEST_MARKER split) so its
# downgrade/upgrade cannot corrupt the shared verify DB for sibling tests.
markers = [
    "migration: schema-mutating migration-reversibility test; runs on an isolated ephemeral branch",
]
