[project]
name = "stockflow-cap-20260624-072956"
version = "0.1.0"
description = "FastAPI + SQLAlchemy + Lakebase database branches"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.14.0",
    "psycopg[binary]>=3.2.0",
    "python-dotenv>=1.0.0",
    "jinja2>=3.1.6",
    "python-multipart>=0.0.32",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "httpx>=0.27.0",
    "pytest-bdd>=7.0.0",
    "pytest-playwright>=0.5.0",
]
